Update hero section content and footer copyright information

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     I am deeply passionate about technology and dedicated to exploring new innovations!
                 </p>
                 
-                <div class="hero-skills">
+                <!-- <div class="hero-skills">
                     <div class="skill-highlights">
                         <span class="skill-highlight">Python</span>
                         <span class="skill-highlight">Machine Learning</span>
@@ -54,7 +54,7 @@
                         <span class="skill-highlight">TensorFlow</span>
                         <span class="skill-highlight">SQL</span>
                     </div>
-                </div>
+                </div> -->
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work</a>
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
@@ -244,7 +244,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2024 Your Name. All rights reserved.</p>
+                <p>&copy; Tai Vu.</p>
                 <div class="footer-links">
                     <a href="#" class="footer-link">Privacy Policy</a>
                     <a href="#" class="footer-link">Terms of Service</a>
