--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#home" class="nav-logo">Tai Vu</a>
+            <a href="#home" class="nav-logo">💡</a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="#home" class="nav-link">Home</a>
@@ -21,7 +21,7 @@
                     <a href="#projects" class="nav-link">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#blog" class="nav-link">Blog</a>
+                    <a href="blog/index.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a href="#contact" class="nav-link">Contact</a>
@@ -60,10 +60,9 @@
                     <a href="#contact" class="btn btn-secondary">Get In Touch</a>
                 </div>
                 <div class="social-links">
-                    <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-link"><i class="fas fa-envelope"></i></a>
+                    <a href="https://linkedin.com/in/tai-vu" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/taivu7" class="social-link"><i class="fab fa-github"></i></a>
+                    <a href="mailto:me@taivu.dev" class="social-link"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </div>
@@ -150,7 +149,7 @@
                         </div>
                         <h3>Understanding Feature Engineering in ML</h3>
                         <p>Explore the importance of feature engineering and how it can significantly improve your machine learning model performance.</p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="blog/posts/sample-post.html" class="read-more">Read More</a>
                     </div>
                 </article>
 
